language/move-lang/tests/move_check/typing/pack_reference.exp
error: 

   ┌── tests/move_check/typing/pack_reference.move:5:9 ───
   │
 5 │         Box { f: r_imm };
   │         ^^^^^^^^^^^^^^^^ Invalid type argument
   ·
 5 │         Box { f: r_imm };
   │         ---------------- Expected a single non-reference type, but found: '&u64'
   │

error: 

   ┌── tests/move_check/typing/pack_reference.move:6:9 ───
   │
 6 │         Box { f: r_mut };
   │         ^^^^^^^^^^^^^^^^ Invalid type argument
   ·
 6 │         Box { f: r_mut };
   │         ---------------- Expected a single non-reference type, but found: '&mut u64'
   │

